--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -166,3 +166,9 @@ jobs:
         with:
           dry-run: ${{ github.ref_type != 'tag' }}
           registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+      - name: Create Release
+        uses: ncipollo/release-action@v1.18.0
+        with:
+          artifacts: digital-blasphemy-client-linux,digital-blasphemy-client-linux,digital-blasphemy-client-linux.exe
+          generateReleaseNotes: true
+          makeLatest: true
