--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -143,6 +143,10 @@ jobs:
       - build-windows
       - build-macos
     steps:
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+      - name: Setup rust
+        uses: actions-rust-lang/setup-rust-toolchain@v1
       - name: Retrieve saved linux binary
         uses: actions/download-artifact@v4
         with:
