--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -167,8 +167,8 @@ jobs:
       - name: Commit version
         if: ${{ github.ref_type == 'tag' }}
         run: |
-          git config --global user.email "githubactions@benjaminsproule.com"
-          git config --global user.name "GitHub Actions"
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add Cargo.toml
           git commit -m "chore: set version to ${{ github.ref_name }}"
           git push
