--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     if: github.ref_type != 'tags'
     steps:
       - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+        uses: actions/checkout@v4
       - name: Setup rust
         uses: actions-rust-lang/setup-rust-toolchain@v1
       - name: Run formatting check
@@ -34,7 +34,7 @@ jobs:
     if: github.ref_type != 'tags'
     steps:
       - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+        uses: actions/checkout@v4
       - name: Setup rust
         uses: actions-rust-lang/setup-rust-toolchain@v1
       - name: Run lint
@@ -45,7 +45,7 @@ jobs:
     if: github.ref_type != 'tags'
     steps:
       - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+        uses: actions/checkout@v4
       - name: Run tests
         uses: actions-rust-lang/setup-rust-toolchain@v1
       - name: Run tests
@@ -56,7 +56,7 @@ jobs:
     if: github.ref_type != 'tags'
     steps:
       - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+        uses: actions/checkout@v4
       - name: Setup rust
         uses: actions-rust-lang/setup-rust-toolchain@v1
       - name: Run tests
@@ -67,7 +67,7 @@ jobs:
     if: github.ref_type != 'tags'
     steps:
       - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+        uses: actions/checkout@v4
       - name: Setup rust
         uses: actions-rust-lang/setup-rust-toolchain@v1
       - name: Run tests
@@ -80,7 +80,7 @@ jobs:
       - test-linux
     steps:
       - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+        uses: actions/checkout@v4
       - name: Setup rust
         uses: actions-rust-lang/setup-rust-toolchain@v1
       - name: Run build
@@ -101,7 +101,7 @@ jobs:
       - test-windows
     steps:
       - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+        uses: actions/checkout@v4
       - name: Setup rust
         uses: actions-rust-lang/setup-rust-toolchain@v1
       - name: Run build
@@ -122,7 +122,7 @@ jobs:
       - test-macos
     steps:
       - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+        uses: actions/checkout@v4
       - name: Setup rust
         uses: actions-rust-lang/setup-rust-toolchain@v1
       - name: Run build
@@ -144,7 +144,7 @@ jobs:
       - build-macos
     steps:
       - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+        uses: actions/checkout@v4
       - name: Setup rust
         uses: actions-rust-lang/setup-rust-toolchain@v1
       - name: Retrieve saved linux binary
