--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -171,7 +171,7 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add Cargo.toml
           git commit -m "chore: set version to ${{ github.ref_name }}"
-          git push
+          git push origin HEAD:main
       - name: Publish to crates.io
         uses: katyo/publish-crates@v2
         with:
