--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,33 +59,56 @@ jobs:
       - name: Run build
         if: github.event_name != 'pull_request' && !failure()
         run: cargo build --release
-  release:
+  release-dry-run:
     runs-on: "ubuntu-latest"
     timeout-minutes: 30
     needs:
       - test-build
+    if: ${{ github.ref_type != 'tag' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Setup rust
         uses: actions-rust-lang/setup-rust-toolchain@v1
-      - name: Set version
-        if: ${{ github.ref_type == 'tag' }}
-        run: |
-          cargo install cargo-edit --no-default-features --features "set-version"
-          cargo set-version ${{ github.ref_name }}
-      - name: Commit version
-        if: ${{ github.ref_type == 'tag' }}
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add Cargo.toml Cargo.lock
-          git commit -m "chore: set version to ${{ github.ref_name }}"
-          git push origin HEAD:main
       - name: Publish to crates.io
         uses: katyo/publish-crates@v2
         with:
-          dry-run: ${{ github.ref_type != 'tag' }}
+          dry-run: true
+          registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+  release:
+    runs-on: "ubuntu-latest"
+    timeout-minutes: 30
+    needs:
+      - test-build
+    if: ${{ github.ref_type == 'tag' }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup rust
+        uses: actions-rust-lang/setup-rust-toolchain@v1
+      - name: Configure git
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+      - name: Set version for release
+        run: |
+          cargo install cargo-edit --no-default-features --features "set-version"
+          cargo set-version ${{ github.ref_name }}
+      - name: Commit release version
+        run: |
+          git add Cargo.toml Cargo.lock
+          git commit -m "chore: set version to ${{ github.ref_name }}"
+      - name: Set version for next release
+        run: |
+          cargo install cargo-edit --no-default-features --features "set-version"
+          cargo set-version $(echo ${{ github.ref_name }} | awk -F. -v OFS=. '{$NF += 1 ; print}')-alpha
+      - name: Commit next release version
+        run: |
+          git add Cargo.toml Cargo.lock
+          git commit -m "chore: set version to ${{ github.ref_name }}"
+      - name: Publish to crates.io
+        uses: katyo/publish-crates@v2
+        with:
           registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
       - name: Create Release
         if: ${{ github.ref_type == 'tag' }}
