--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -101,18 +101,19 @@ jobs:
         run: |
           git add Cargo.toml Cargo.lock
           git commit -m "chore: set version to ${{ github.ref_name }}"
-      - name: Set version for next release
-        run: |
-          cargo install cargo-edit --no-default-features --features "set-version"
-          cargo set-version $(echo ${{ github.ref_name }} | awk -F. -v OFS=. '{$NF += 1 ; print}')-alpha
-      - name: Commit next release version
-        run: |
-          git add Cargo.toml Cargo.lock
-          git commit -m "chore: set version to ${{ github.ref_name }}"
       - name: Publish to crates.io
         uses: katyo/publish-crates@v2
         with:
           registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+      - name: Set version for next release
+        run: |
+          NEXT_VERSION=$(echo ${{ github.ref_name }} | awk -F. -v OFS=. '{$NF += 1 ; print}')-alpha
+          cargo set-version "$NEXT_VERSION"
+      - name: Commit next release version
+        run: |
+          git add Cargo.toml Cargo.lock
+          git commit -m "chore: set version to $NEXT_VERSION"
+          git push origin HEAD:main
       - name: Create Release
         if: ${{ github.ref_type == 'tag' }}
         uses: ncipollo/release-action@v1.18.0
