--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["api-bindings"]
 
 [dependencies]
 serde = { version = "1.0.228", features = ["derive"] }
-reqwest = { version = "0.13.0", features = ["json"] }
+reqwest = { version = "0.13.1", features = ["json", "query"] }
 log = "0.4.28"
 
 [dev-dependencies]
